--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,10 @@
 {
-  "extends": ["@segment/eslint-config/browser/legacy", "prettier"]
+  "extends": ["@segment/eslint-config/browser/legacy", "prettier"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "sourceType": "module"
+  },
+  "rules": {
+    "strict": "warn"
+  }
 }
