--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@segment/analytics.js-integration": "^3.2.1",
     "@segment/eslint-config": "^4.0.0",
     "@types/node": "^14.0.6",
+    "@typescript-eslint/parser": "^3.1.0",
     "browserify": "13.0.0",
     "browserify-istanbul": "^2.0.0",
     "codecov": "^3.0.2",
