--- a/package.json
+++ b/package.json
@@ -62,11 +62,13 @@
     "uuid": "^3.4.0"
   },
   "devDependencies": {
+    "@codeceptjs/mock-request": "^0.3.0",
     "@segment/analytics.js-integration": "^3.2.1",
     "@segment/eslint-config": "^4.0.0",
     "@types/node": "^14.0.6",
     "browserify": "13.0.0",
     "browserify-istanbul": "^2.0.0",
+    "codeceptjs": "^2.6.5",
     "codecov": "^3.0.2",
     "compat-trigger-event": "^1.0.0",
     "component-each": "^0.2.6",
@@ -95,6 +97,7 @@
     "phantomjs-prebuilt": "^2.1.7",
     "prettier-eslint-cli": "^4.7.1",
     "proclaim": "^3.4.1",
+    "puppeteer": "^3.3.0",
     "sinon": "^1.7.3",
     "snyk": "^1.83.0",
     "ts-node": "^8.10.2",
