--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
     "allowJs": true,
     "outDir": "build"
   },
-  "exclude": ["node_modules", "*.md", "Makefile", "karma.*", "test"]
+  "include": ["lib"],
+  "exclude": ["node_modules", "*.md", "Makefile", "karma.*", "test", "test-e2e"]
 }
